完成文章'1brc比赛讲解'